[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neverdown"
version = "0.1.0"
description = "Automatic failover across generative AI providers. Never let your app go down when Fal or Replicate does."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv",
]
