[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixelrelay"
version = "0.1.0"
description = "Automatic failover across generative media APIs. Pixelrelay hands off your image and video jobs to the next provider when Fal or Replicate goes down."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv",
]
