[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixelrelay"
version = "0.2.3"
description = "Self-hosted unified API for generative media. One webhook-native endpoint across Fal, Replicate, and more — bring your own keys, get persistent jobs and automatic provider failover for free."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "cryptography>=42",
    "pydantic>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv",
    "httpx>=0.27.0",
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "cryptography>=42",
    "pydantic>=2.6",
]

[project.scripts]
pixelrelay-gateway = "pixelrelay.gateway.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pixelrelay"]
